--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,14 @@ a:hover {
     min-width: 260px;
 }
 
+
+/*--Product--*/
+
+.card-body {
+    max-height: 350px;
+    overflow: scroll;
+}
+
 /*---Increment counter on product details page--*/
 .small-buy-now-button{
     background: #80C4FF;
