mobile top header link profile added

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -39,7 +39,7 @@
             </li>
             {% endif %}
             <li>
-                <a href="" class="dropdown-item-sm ml-2 mb-2">My Profile</a>
+                <a href="{% url 'profile' %}" class="dropdown-item-sm ml-2 mb-2">My Profile</a>
             </li>
             <li>
                 <a href="{% url 'account_logout' %}" class="dropdown-item-sm ml-2 mb-2">Logout</a>
