README.MD documents added. Active link documentation added

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,8 +48,7 @@ body {
 }
 
 /*--homepage header--*/
-
-.dropdown-item.active, .dropdown-item:active{
+.active {
     background-color: #80ffa9;
 }
 
