--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,8 +1,9 @@
 {% load active_link_tags %}
+
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-lean {% active_link 'facilities' 'active' %}" href="{% url 'facilities' %}?facilitycategory=weights_room,cardio_gym,cafe_coffee" id="facilities" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a href="{% url 'facilities' %}?facilitycategory=weights_room,cardio_gym,cafe_coffee" class="nav-link dropdown-toggle text-lean {% active_link 'facilities' 'active' %}" id="facilities" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Facilities
         </a>
         <div class="dropdown-menu" aria-labelledby="facilities">
@@ -12,7 +13,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-lean {% active_link 'products' 'active' %}" href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates" id="classes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a href="{% url 'products' %}?category=online_class,kettlebell_class,lean_machine,pilates" class="nav-link dropdown-toggle text-lean {% active_link 'products' 'active' %}" id="classes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Classes
         </a>
         <div class="dropdown-menu" aria-labelledby="classes">
@@ -23,7 +24,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-lean" href="{% url 'products' %}?category=online_membership,public_membership,corporate_membership,membership_student" id="membership" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a href="{% url 'products' %}?category=online_membership,public_membership,corporate_membership,membership_student" class="nav-link dropdown-toggle text-lean {% active_link 'products' 'active' %}" id="membership" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Membership
         </a>
         <div class="dropdown-menu" aria-labelledby="membership">
