README js and css validator notes added

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -160,5 +160,5 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
-<script type="text/javascript" src="{% static 'bag/js/bag.js' %}"></script>
+<script src="{% static 'bag/js/bag.js' %}"></script>
 {% endblock %}
