UX README.MD read over and edited. footer text changed showing old static site

--- a/templates/base.html
+++ b/templates/base.html
@@ -210,8 +210,8 @@
         <div class="footer-copyright text-center">
             <div class="container">
                 © 2020 Copyright Text
-                <a class="right" href="https://andrew-code2020.github.io/CI-MS-1-Lean-Temple/">Link to Temple
-                    Lean
+                <a class="right" href="https://andrew-code2020.github.io/CI-MS-1-Lean-Temple/">Link to Previous Temple
+                    Lean Static Site
                     Gym</a>
             </div>
         </div>
