profile app comments added to all files in app

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -57,6 +57,7 @@
             </div>
         </div>
     </div>
+    <!--Order History table so user can see previous orders-->
     <div class="col-12 col-lg-6">
         <h5>Order History</h5>
         <div class="order-history table-responsive">
@@ -99,7 +100,7 @@
 </div>
 
 {% endblock %}
-
+<!--Additional js for country field-->
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
